--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
     "babel-preset-env": "^1.6.0",
     "babel-preset-stage-0": "^6.22.0",
     "body-parser": "^1.18.2",
+    "cors": "^2.8.4",
     "express": "^4.15.5",
     "morgan": "^1.9.0",
     "pg-promise": "^6.10.0"
